syntax = "proto3";

option java_package = "org.github.felipegutierrez.explore.grpc.greet";
option java_multiple_files = true;
option java_outer_classname = "GreetProto";
option cc_generic_services = true;
option java_generic_services = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  // Unary gRPC call
  rpc Greet(GreetRequest) returns (GreetResponse) {};
}
